# bthesis

./: CMakeLists.txt  README.md  luby.cpp  luby.cu  output.cpp  read_file.cpp
benchmarks/: benchmark.cpp  degree_update_cmp.cpp  longrun.cpp  reduction.cpp
src/algorithms/: degree_based.cpp  degree_based.hpp  iter.cpp  luby.cpp  luby.hpp  luby_iter.cpp  reductions.cpp  verify_result.cpp
src/main/: main.cpp
src/read-write/: output.cpp  read_file.cpp
