cmake_minimum_required(VERSION 3.16)
project(LubyGPU CXX)
find_package(Kokkos REQUIRED)
add_executable(Main src/main/main.cpp)
add_library(LubyGPU src/algorithms/luby.cpp)
add_library(Output src/read-write/output.cpp)
add_library(Input src/read-write/read_file.cpp)
add_library(Verification src/algorithms/verify_result.cpp)
add_library(DegreeGPU src/algorithms/degree_based.cpp)
add_library(LubyIterGPU src/algorithms/iter.cpp)
target_link_libraries(LubyIterGPU Kokkos::kokkos)
target_link_libraries(LubyGPU Kokkos::kokkos)
target_link_libraries(Output Kokkos::kokkos)
target_link_libraries(Input Kokkos::kokkos)
target_link_libraries(Verification Kokkos::kokkos)
target_link_libraries(DegreeGPU Kokkos::kokkos)
target_link_libraries(DegreeGPU LubyGPU)
target_link_libraries(LubyIterGPU DegreeGPU)
target_link_libraries(Main Kokkos::kokkos)
target_link_libraries(Main Input)
target_link_libraries(Main Output)
target_link_libraries(Main Verification)
target_link_libraries(Main LubyIterGPU)