cmake_minimum_required(VERSION 3.16)
project(LubyGPU CXX)
find_package(Kokkos REQUIRED)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(CMAKE_CXX_FLAGS_RELEASE "-O3")

add_executable(Main src/main/main.cpp)
add_executable(Benchmark benchmarks/benchmark.cpp)
add_executable(DegreeUpdate benchmarks/degree_update_cmp.cpp)
add_executable(Reduction benchmarks/reduction.cpp)
add_executable(Longrun benchmarks/longrun.cpp)
add_library(LubyGPU src/algorithms/luby.cpp)
add_library(Output src/read-write/output.cpp)
add_library(Input src/read-write/read_file.cpp)
add_library(Verification src/algorithms/verify_result.cpp)
add_library(DegreeGPU src/algorithms/degree_based.cpp)
add_library(LubyIterGPU src/algorithms/iter.cpp)
add_library(Reductions src/algorithms/reductions.cpp)
target_link_libraries(LubyIterGPU Kokkos::kokkos)
target_link_libraries(LubyGPU Kokkos::kokkos)
target_link_libraries(Output Kokkos::kokkos)
target_link_libraries(Input Kokkos::kokkos)
target_link_libraries(Verification Kokkos::kokkos)
target_link_libraries(DegreeGPU Kokkos::kokkos)
target_link_libraries(Benchmark Kokkos::kokkos)
target_link_libraries(DegreeUpdate Kokkos::kokkos)
target_link_libraries(Reductions Kokkos::kokkos)
target_link_libraries(Reduction Kokkos::kokkos)
target_link_libraries(Longrun Kokkos::kokkos)
target_link_libraries(DegreeGPU LubyGPU)
target_link_libraries(LubyIterGPU DegreeGPU)
target_link_libraries(LubyGPU Reductions)
target_link_libraries(Main Kokkos::kokkos)
target_link_libraries(Main Input)
target_link_libraries(Main Output)
target_link_libraries(Main Verification)
target_link_libraries(Main LubyIterGPU)
target_link_libraries(Benchmark Input)
target_link_libraries(Benchmark Verification)
target_link_libraries(Benchmark LubyIterGPU)
target_link_libraries(DegreeUpdate Input)
target_link_libraries(DegreeUpdate Verification)
target_link_libraries(DegreeUpdate DegreeGPU)
target_link_libraries(Reduction Input)
target_link_libraries(Reduction Verification)
target_link_libraries(Reduction DegreeGPU)
target_link_libraries(Longrun Input)
target_link_libraries(Longrun Verification)
target_link_libraries(Longrun DegreeGPU)
